feat: validate aggregate request with Jakarta @Valid at API boundary
Introduce typed AggregateRequest record with @NotEmpty/@NotBlank
constraints so invalid payloads fail at the controller layer instead of
inside the service. Additional hardening:

- narrow GlobalExceptionHandler to IllegalStateException only
- remove AccountGroupRequestFactory and unused AggregationContext.inboundRequest
- simplify DownstreamClientException by deriving message from ProblemDetail.detail
- switch unit tests to JsonMapper.builder() (Jackson 3 idiom)
- enable Gradle configuration-cache and build-cache by default
- add spring-boot-configuration-processor annotation processor
- turn on NullAway JSpecify mode + AcknowledgeRestrictiveAnnotations
- group Jackson / Micrometer / Reactor updates in Renovate

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>