@@ -1,38 +1,28 @@
 package dev.abramenka.aggregation.model;
 
 import dev.abramenka.aggregation.error.InvalidAggregationRequestException;
-import java.util.Collections;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Set;
-import tools.jackson.databind.JsonNode;
+import org.jspecify.annotations.Nullable;
 
 public record EnrichmentSelection(boolean all, Set<String> names) {
 
-    private static final String INCLUDE_FIELD = "include";
-
-    public static EnrichmentSelection from(JsonNode inboundRequest) {
-        JsonNode includeNode = inboundRequest.path(INCLUDE_FIELD);
-        if (includeNode.isMissingNode() || includeNode.isNull()) {
+    public static EnrichmentSelection from(@Nullable List<String> include) {
+        if (include == null) {
             return new EnrichmentSelection(true, Set.of());
         }
 
-        if (!includeNode.isArray()) {
-            throw new InvalidAggregationRequestException("'include' must be an array of aggregation enrichment names");
-        }
-
         Set<String> requested = new LinkedHashSet<>();
-        includeNode.forEach(item -> {
-            String name = item.stringValueOpt()
-                    .map(String::trim)
-                    .orElseThrow(
-                            () -> new InvalidAggregationRequestException("'include' values must be non-blank strings"));
-            if (name.isBlank()) {
+        for (String name : include) {
+            String trimmed = name.trim();
+            if (trimmed.isBlank()) {
                 throw new InvalidAggregationRequestException("'include' values must be non-blank strings");
             }
-            requested.add(name);
-        });
+            requested.add(trimmed);
+        }
 
-        return new EnrichmentSelection(false, Collections.unmodifiableSet(requested));
+        return new EnrichmentSelection(false, Set.copyOf(requested));
     }
 
     public boolean includes(String name) {
